fix(ci): remove `just init` use cargo to install `cargo-insta` explicitly

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Initialize setup
-        run: just init
+        run: cargo install cargo-insta
       - name: Run tests
         run: cargo insta test
