--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -17,9 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install Just
+        run: cargo install just
       - name: Build
         run: cargo build --verbose
       - name: Initialize setup
-        run: cargo install cargo-insta
+        run: just init
       - name: Run tests
         run: cargo insta test
