--- a/compiler/justfile
+++ b/compiler/justfile
@@ -14,7 +14,10 @@ build:
     cargo build --verbose
 
 clippy:
-    cargo clippy --all-targets
+    cargo clippy --all-targets --all-features -- -D warnings
+
+clippy-fix *args='':
+    cargo clippy --fix $@
 
 ci-fmt:
     cargo fmt --all -- --check
