--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lazy_static = "1.4.0"
 pest = { version = "2.0", features = ["pretty-print"] }
 pest_derive = "2.0"
 
